# yulaven

./: .clinerules  .gitignore  Cargo.toml  README.md
.agents/workflows/: bevy_ecs_guidelines.md  check_code_quality.md  git_workflow.md  survival_game_design.md
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: dummy.cpp
android/app/src/main/res/values/: ic_launcher_background.xml  (+1 more)
android/gradle/: libs.versions.toml
assets/shaders/: circular_cooldown.wgsl
scripts/: build-android.sh  deploy-android.sh  emulator.sh  update-ndk-env.sh
src/: component.rs  constant.rs  lib.rs  main.rs  system.rs
src/combat/: assets.rs  collision.rs  components.rs  death.rs  effects.rs  mod.rs  nova.rs  systems.rs  warlock.rs
src/combat/projectiles/: fireball.rs  mod.rs  orb.rs
src/component/: enemy.rs  experience.rs  map.rs  orb.rs  player.rs  spell.rs
src/core/: components.rs  mod.rs  setup.rs  state.rs
src/enemy/: components.rs  mod.rs  systems.rs
src/map/: components.rs  mod.rs  systems.rs
src/player/: active_ability.rs  character.rs  components.rs  mod.rs  system  systems.rs
src/player/character/: abilities.rs  definition.rs  mod.rs  selected.rs
src/player/systems/: animation.rs  dash_trail.rs  mod.rs  movement.rs  teleport.rs
src/system/: animation.rs  combat.rs  enemy.rs  experience.rs  map.rs  movement.rs  spawn.rs  startup.rs  ui.rs
src/ui/: character_select.rs  game_over.rs  hud.rs  joystick.rs  level_up.rs  main_menu.rs  map_ui.rs  mod.rs  pause_menu.rs
(+2 files in other folders)
