[package]
name = "yulaven"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["debug"] }
rand = "0.8"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
bevy = { version = "0.18", features = ["dynamic_linking"] }

[package.metadata.android]
package = "com.beratdalsuna.yulaven"
orientation = "portrait"
min_sdk_version = 30
target_sdk_version = 34
assets = "assets"

# cdylib  → Android APK (cargo-apk loads it as a shared lib)
# rlib    → keeps the desktop binary working
[lib]
name = "yulaven"
crate-type = ["cdylib", "rlib"]
# Enable full optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Apply similar optimizations to the main crate for a smaller debug APK.
[profile.dev]
opt-level = 1
strip = false
lto = "off"

# Enable more optimization in the release profile.
[profile.release]
opt-level = 3
# Strip symbols to significantly reduce APK size.
strip = true
# Compile the entire crate as one unit.
codegen-units = 1
# Do a second optimization pass over the entire program.
lto = true
# Optimize for size as well.
# panic = "abort"

[patch.crates-io]
wgpu-types = { git = "https://github.com/NiklasEi/wgpu", branch = "patch-bevy-flickering-android" }
android-activity = { git = "https://github.com/damus-io/android-activity", rev = "a8948332c7c551303d32eb26a59d0abd676e47a5" }
